--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     height: 100vh;
     background: var(--black, #0E1014);
+    width: 100%;
 }
 
 
@@ -79,10 +80,13 @@ body {
 
 .container {
     width: 71.3rem;
-    height: 4.56rem;
     display: flex;
     margin: 0 auto;
 }
+
+
+/* /////////////header/////////////////////// */
+
 
 .logo {
     display: flex;
@@ -171,6 +175,7 @@ nav {
     min-width: fit-content;
 }
 
+/* //////////////////main/////////////////////// */
 .left {
     margin-top: 5.63rem;
 }
@@ -241,12 +246,13 @@ nav {
 
 .main-wrapper {
     justify-content: space-between;
+    margin-bottom: 4.31rem;
 }
 
 
 
 .item_title {
-    
+
     color: var(--light-text, #E4E5EA);
     text-align: right;
     font-family: Inter;
@@ -267,30 +273,151 @@ nav {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-   
-    
+
+
 }
-.item{
+
+.item {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    
+
 }
-.item_1_text{
+
+.item_1_text {
     width: 5.5625rem;
 }
-.item_2_text{
+
+.item_2_text {
     width: 8.4375rem;
 }
-.item_3_text{
+
+.item_3_text {
     width: 9.25rem;
 }
-.features{
+
+.features {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2.5rem;
+    margin-bottom: 3.81rem;
 }
 
-/* @media (max-width: 1400px) {
-    body{font-size: 10px;}
-} */
+.right_btn {
+    width: 16.375rem;
+    height: 3.8125rem;
+    flex-shrink: 0;
+    text-align: center;
+    background-color: #4077F3;
+    color: #E4E5EA;
+    font-size: 16px;
+    font-family: Inter;
+    text-decoration: none;
+    display: block;
+    padding: 1.31rem;
+}
+
+
+/* ///////////////footer///////////////// */
+
+.footer_wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_col {
+    list-style: none;
+
+}
+
+.footer_col_title {
+    color: var(--dark-gray, #656566);
+
+    /* маленькие заголовки */
+    font-family: Inter;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.04375rem;
+    text-transform: uppercase;
+    margin-bottom: 1.25rem;
+}
+
+.col_item>a {
+    color: var(--light-text, #E4E5EA);
+    font-family: Inter;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+
+}
+
+.col_item {
+
+    margin-bottom: 0.63rem;
+}
+
+.last_col {
+    text-align: right;
+}
+
+.footer_medias {
+    display: flex;
+    justify-content: space-between;
+    width: 5rem;
+    margin-left: 12.3rem;
+
+}
+
+.copyright {
+    margin-top: 4.38rem;
+}
+
+.copyright>a {
+    color: var(--light-text, #E4E5EA);
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: none;
+}
+.underline{
+    text-decoration: none;
+    border-bottom: 0.1px solid white;
+    margin-top: 0.31rem;
+}
+
+/* ///////////media/////////// */
+
+@media (max-width: 750px){
+    .logo{
+        display: none;
+    }
+    .contacts{
+        display: none;
+    }
+    .menu{
+        width: 100%;
+        justify-content: space-around;
+        margin-right:0;
+    }
+    .container{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .sert{
+        display: none;
+    }
+    nav{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+
+}
