--- a/style.css
+++ b/style.css
@@ -666,24 +666,26 @@ nav {
         fill: radial-gradient(82.3% 82.3% at 27.25% 26.5%, rgba(236, 208, 255, 0.64) 0%, rgba(161, 93, 207, 0.24) 59.67%, rgba(118, 49, 164, 0.21) 78.59%, rgba(86, 24, 128, 0.23) 100%);
         filter: drop-shadow(3px 6px 27px rgba(177, 118, 217, 0.25)) blur(5px);
         backdrop-filter: blur(2px);
-        background-image: url("./imgs/purple\ ball2.jpg");
+        background-image: url("./imgs/purple\ ball.png");
         background-repeat: no-repeat;
         background-size: contain;
         position: absolute;
         top: 24.8rem;
-        left: 27rem;
+        left: 24rem;
         border: none;
+        display: block;
     }
 
     .glass {
         width: 100%;
-        height: 27.8125rem;
+        height: 30.8125rem;
         position: absolute;
         top: 5.44rem;
         z-index: -2;
         flex-shrink: 0;
         background: radial-gradient(304.35% 148.2% at 3.2% 3.49%, rgba(255, 246, 233, 0.10) 0%, rgba(26, 29, 35, 0.10) 26.62%, rgba(26, 29, 35, 0.10) 52.1%, rgba(26, 29, 35, 0.01) 70.17%, rgba(26, 29, 35, 0.00) 100%);
         backdrop-filter: blur(7.5px);
+        display: block;
     }
 
     .yellowblur {
